# rust-vector-logger

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: logger.rs
tests/: integration_test.rs
