[package]
name = "rust-vector-logger"
version = "0.1.3"
authors = ["Cesar Augusto Sanchez <cesan3@gmail.com>"]
edition = "2021"
description = "A simple logger for Rust that logs to a vector"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/cesan3/rust-vector-logger"
keywords = ["logging", "logger", "vector", "async", "tokio"]
categories = ["logging", "async-std", "tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8"
log = "0.4"
env_logger = "0.9"
